--- a/examples/package.json
+++ b/examples/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "boolean-search-dev.js",
   "scripts": {
-    "build": "browserify app.js -o bundle.js",
+    "build": "browserify app.js -o bundle.js --debug",
     "watch": "watchify app.js -v -o bundle.js"
   },
   "author": "",
